--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "fastapi>=0.115.11",
     "langchain-ollama>=0.2.3",
     "pre-commit>=4.1.0",
     "pyright>=1.1.396",
     "ruff>=0.11.0",
+    "uvicorn>=0.34.0",
 ]
