--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.115.11",
     "langchain-ollama>=0.2.3",
+    "langgraph>=0.3.11",
     "pre-commit>=4.1.0",
     "pyright>=1.1.396",
     "ruff>=0.11.0",
