--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.115.11",
+    "google-search-results>=2.4.2",
     "langchain-ollama>=0.2.3",
     "langgraph>=0.3.11",
     "pre-commit>=4.1.0",
