--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "fastapi>=0.115.11",
     "google-search-results>=2.4.2",
     "langchain-ollama>=0.2.3",
+    "langchain-openai>=0.3.8",
     "langgraph>=0.3.11",
     "pre-commit>=4.1.0",
     "pyright>=1.1.396",
